--- a/projects/templates/projects/landing.html
+++ b/projects/templates/projects/landing.html
@@ -35,27 +35,27 @@
     <!-- Tabs Section -->
     <section class="tabs">
         <div class="tab-buttons">
-            <button class="tab-button active" data-tab="1">Code</button>
-            <button class="tab-button" data-tab="2">Plan</button>
-            <button class="tab-button" data-tab="3">Collaborate</button>
-            <button class="tab-button" data-tab="4">Automate</button>
-            <button class="tab-button" data-tab="5">Secure</button>
+            <button class="tab-button active" data-tab="1">Collaborate</button>
+            <button class="tab-button" data-tab="2">Connect</button>
+            <button class="tab-button" data-tab="3">Share</button>
+            <button class="tab-button" data-tab="4">Message</button>
+            <button class="tab-button" data-tab="5">Project</button>
         </div>
         <div class="tab-content">
             <div class="tab-pane active" id="tab-1">
-                <img src="{% static 'projects/images/profile_view.png' %}" alt="Code">
+                <img src="{% static 'projects/images/collaborate.png' %}" alt="Collaborate">
             </div>
             <div class="tab-pane" id="tab-2">
-                <img src="{% static 'projects/images/project_view.png' %}" alt="Plan">
+                <img src="{% static 'projects/images/connect.png' %}" alt="Connect">
             </div>
             <div class="tab-pane" id="tab-3">
-                <img src="{% static 'projects/images/profile_view.png' %}" alt="Collaborate">
+                <img src="{% static 'projects/images/share.png' %}" alt="Share">
             </div>
             <div class="tab-pane" id="tab-4">
-                <img src="{% static 'projects/images/profile_view.png' %}" alt="Automate">
+                <img src="{% static 'projects/images/message.png' %}" alt="Message">
             </div>
             <div class="tab-pane" id="tab-5">
-                <img src="{% static 'projects/images/profile_view.png' %}" alt="Secure">
+                <img src="{% static 'projects/images/project.png' %}" alt="Project">
             </div>
         </div>
     </section>
