--- a/projects/templates/projects/register.html
+++ b/projects/templates/projects/register.html
@@ -3,8 +3,10 @@
 
 {% block content %}
 <div class="container custom-form-container mx-auto">
-    <div class="custom-form-wrapper">
+    <div class="header-wrapper">
         <h2>Sign Up</h2>
+    </div>
+    <div class="custom-form-wrapper">
         <form class="custom-form" method="POST" action="{% url 'register' %}" enctype="multipart/form-data">
             {% csrf_token %}
 
