Fixed the signup page "signup" header location and styling.

--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -2511,7 +2511,8 @@ footer p {
 }  
 
 .custom-form-wrapper {     
-    display: flex;     
+    display: flex;   
+    flex-direction: column;   
     justify-content: center;     
     align-items: center;     
     width: 100%;     
