--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -1975,6 +1975,10 @@ textarea {
    32 Project Related Styles
    ========================================================================== */
 /* Project Grid */
+.custom-portfolio-heading {
+    color: black;
+}
+
 .custom-project-section {
     display: flex;
     flex-direction: column;
