--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -1820,7 +1820,7 @@ textarea {
 }
 
 .sent-message {
-    background-color: #0084ff;
+    background-color: #007373ff;
     color: #ffffff;
     align-self: flex-end;
     border-radius: 16px 16px 0 16px;
@@ -1836,7 +1836,7 @@ textarea {
 .message-info {
     font-size: 11px;
     /* Reduce font size */
-    color: #777;
+    color: #000;
     margin-bottom: 3px;
     /* Reduce margin */
 }
@@ -1863,7 +1863,7 @@ textarea {
 
 .message-form textarea {
     width: 100%;
-    height: 30px;
+    height: 46px;
     /* Reduce height */
     border: none;
     border-radius: 12px;
@@ -1880,14 +1880,14 @@ textarea {
 }
 
 .send-message-btn {
-    background-color: #007bff;
+    background-color: #007373ff;
     color: #ffffff;
     border: none;
-    border-radius: 16px;
+    border-radius: 5px;
     /* Soften border radius */
-    width: 36px;
+    width: 44px;
     /* Reduce size */
-    height: 36px;
+    height: 34px;
     /* Reduce size */
     margin-left: 8px;
     /* Reduce space between input and button */
@@ -1899,7 +1899,7 @@ textarea {
 }
 
 .send-message-btn:hover {
-    background-color: #0056b3;
+    background-color: rgb(20, 161, 161);
 }
 
 
