--- a/projects/static/projects/styles.css
+++ b/projects/static/projects/styles.css
@@ -1820,7 +1820,7 @@ textarea {
 }
 
 .sent-message {
-    background-color: #007373ff;
+    background-color: rgb(20, 161, 161);
     color: #ffffff;
     align-self: flex-end;
     border-radius: 16px 16px 0 16px;
